samples/_failures_safe/1761434778_9cc7f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8abdf3f8.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_8abdf3f8.c:148:12: error: expected ‘;’ at end of input
  148 |         src
      |            ^
      |            ;
./samples/SAFE/__tmp_8abdf3f8.c:148:9: error: expected declaration or statement at end of input
  148 |         src
      |         ^~~
./samples/SAFE/__tmp_8abdf3f8.c:148:9: error: expected declaration or statement at end of input
